Task 4. Working with rooms fix bugs